@@ -8,6 +8,9 @@
         male_name= _ "loyal"
         female_name= _ "female^loyal"
         description= _ "Zero upkeep"
+        help_text= _ "<italic>text='Loyal'</italic> units don’t incur upkeep. Most units incur an upkeep cost at the end of every turn, which is equal to their level. Loyal units do not incur this cost." + _ "
+
+During campaigns, certain units may opt to join the player’s forces of their own volition. These units are marked with the loyal trait. Although they may require payment to be recalled, they never incur any upkeep costs. This can make them invaluable during a long campaign, when gold is in short supply. This trait is never given to recruited units, so it may be unwise to dismiss such units or to send them to a foolish death."
         [effect]
             apply_to=loyal
         [/effect]
@@ -22,6 +25,9 @@
         male_name= _ "undead"
         female_name= _ "female^undead"
         description= _ "Immune to drain, poison, and plague"
+        help_text= _ "<italic>text='Undead'</italic> units are immune to poison, drain, and plague." + _ "
+
+Undead units generally have undead as their only trait. Since undead units are the bodies of the dead, risen to fight again, poison has no effect upon them. This can make them invaluable in dealing with foes who use poison in conjunction with their attacks."
         [effect]
             apply_to=status
             add=unpoisonable
@@ -45,6 +51,9 @@
         male_name= _ "mechanical"
         female_name= _ "female^mechanical"
         description= _ "Immune to drain, poison, and plague"
+        help_text= _ "<italic>text='Mechanical'</italic> units are immune to poison, drain, and plague." + _ "
+
+Mechanical units generally have mechanical as their only trait. Since mechanical units don’t really have life, drain, poison, and plague have no effect upon them."
         [effect]
             apply_to=status
             add=unpoisonable
@@ -68,6 +77,9 @@
         male_name= _ "elemental"
         female_name= _ "female^elemental"
         description= _ "Immune to drain, poison, and plague"
+        help_text= _ "<italic>text='Elemental'</italic> units are immune to poison, drain, and plague." + _ "
+
+Elemental units generally have elemental as their only trait. Since elemental units are energy-based beings, drain, poison, and plague have no effect upon them."
         [effect]
             apply_to=status
             add=unpoisonable
@@ -89,6 +101,9 @@
         id=strong
         male_name= _ "strong"
         female_name= _ "female^strong"
+        help_text= _ "<italic>text='Strong'</italic> units do 1 more damage for every successful strike in melee combat, and have 1 additional hitpoint." + _ "
+
+While useful for any close-combat unit, strong is most effective for units who have a high number of swings such as the elvish fighter. Strong units can be very useful when a tiny bit of extra damage is all that is needed to turn a damaging stroke into a killing blow."
         [effect]
             apply_to=attack
             range=melee
@@ -107,6 +122,9 @@
         id=dextrous
         male_name= _ "dextrous"
         female_name= _ "female^dextrous"
+        help_text= _ "<italic>text='Dextrous'</italic> units do 1 more damage for every successful strike in ranged combat." + _ "
+
+Dextrous is a trait possessed only by elves. The elven people are known for their uncanny grace, and their great facility with the bow. Some, however, are gifted with natural talent that exceeds their brethren. These elves inflict an additional point of damage with each arrow."
         [effect]
             apply_to=attack
             range=ranged
@@ -121,6 +139,9 @@
         id=quick
         male_name= _ "quick"
         female_name= _ "female^quick"
+        help_text= _ "<italic>text='Quick'</italic> units have 1 extra movement point, but 5% less hitpoints than usual." + _ "
+
+Quick is the most noticeable trait, particularly in slower moving units such as trolls or heavy infantry. Units with the quick trait often have greatly increased mobility in rough terrain, which can be important to consider when deploying your forces. Also, quick units aren’t quite as tough as units without this trait and are subsequently less good at holding contested positions."
         [effect]
             apply_to=movement
             increase=1
@@ -138,6 +159,9 @@
         id=intelligent
         male_name= _ "intelligent"
         female_name= _ "female^intelligent"
+        help_text= _ "Intelligent units require 20% less experience than usual to advance." + _ "
+
+<italic>text='Intelligent'</italic> units are very useful at the beginning of a campaign as they can advance to higher levels more quickly. Later in campaigns Intelligent is not quite as useful because the <italic>text='After Maximum Level Advancement'</italic> (AMLA) is not as significant a change as advancing a level. If you have many ‘maximum level’ units you may wish to recall units with more desirable traits."
         [effect]
             apply_to=max_experience
             increase=-20%
@@ -151,6 +175,9 @@
         id=resilient
         male_name= _ "resilient"
         female_name= _ "female^resilient"
+        help_text= _ "<italic>text='Resilient'</italic> units have an additional 4 hitpoints, and gain 1 more per level." + _ "
+
+Resilient units can be useful at all stages of a campaign, and this is a useful trait for all units. Resilient is often most helpful as a trait when it occurs in a unit that has some combination of low hitpoints, good defense, or high resistances. Resilient units are especially useful for holding strategic positions against opponents."
         [effect]
             apply_to=hitpoints
             increase_total=4
@@ -170,6 +197,9 @@
         male_name= _ "healthy"
         female_name= _ "female^healthy"
         description= _ "Always rest heals"
+        help_text= _ "Renowned for their vitality, some dwarves are sturdier than others and can rest even when traveling." + _ "
+
+<italic>text='Healthy'</italic> units have 1 additional hitpoint, and gain 1 more per level. They will also heal 2 hitpoints each turn, regardless of whether they engaged in combat the turn before."
         [effect]
             apply_to="healthy"
         [/effect]
@@ -192,6 +222,7 @@
         male_name= _ "fearless"
         female_name= _ "female^fearless"
         description= _ "Fights normally during unfavorable times of day/night"
+	help_text= _ "Aversion to light and dark holds no sway over these brave individuals."
         [effect]
             apply_to="fearless"
         [/effect]
@@ -208,6 +239,7 @@
         male_name= _ "fearless"
         female_name= _ "female^fearless"
         description= _ "Fights normally during unfavorable times of day/night"
+	help_text= _ "Aversion to light and dark holds no sway over these brave individuals."
         [effect]
             apply_to="fearless"
         [/effect]
@@ -223,6 +255,7 @@
         male_name= _ "feral"
         female_name= _ "female^feral"
         description= _ "Receives only 50% defense in land-based villages"
+        help_text= _ "Dwellings of sentient beings are not easily used for cover by feral creatures of low intelligence. As a result, <italic>text='feral'</italic> units receive a maximum of 50% defense in any land-based village regardless of base terrain."
         [effect]
             apply_to=defense
             replace=true
@@ -240,6 +273,7 @@
         id=weak
         male_name= _ "weak"
         female_name= _ "female^weak"
+        help_text= _ "Units with the <italic>text='weak'</italic> trait receive a 1 point decrease in hitpoints and melee damage."
         [effect]
             apply_to=attack
             range=melee
@@ -258,6 +292,9 @@
         id=slow
         male_name= _ "slow"
         female_name= _ "female^slow"
+        help_text= _ "<italic>text='Slow'</italic> units have 1 less movement point but 5% more hitpoints." + _ "
+
+Thick-bodied and clumsy, slow individuals of goblins and other species take a movement penalty but are compensated for it with a slight increase in endurance."
         [effect]
             apply_to=movement
             increase=-1
@@ -275,6 +312,9 @@
         id=dim
         male_name= _ "dim"
         female_name= _ "female^dim"
+        help_text= _ "Units with trait <italic>text='dim'</italic> suffer a 20% increase in experience required to advance." + _ "
+
+Dim is a trait all too common in goblins and other lesser species. There are reasons these species are lesser, and this is one of them."
         [effect]
             apply_to=max_experience
             increase=20%
@@ -288,6 +328,7 @@
         id=aged
         male_name= _ "aged"
         female_name= _ "female^aged"
+        help_text= _ "Units with the <italic>text='aged'</italic> trait have 8 hitpoints less and suffer from a 1 point decrease in movement and melee damage."
         [effect]
             apply_to=hitpoints
             increase_total=-8
