@@ -1,4 +1,9 @@
 Version 1.13.5+dev:
+ * User Interface:
+   * Trait descriptions in the help are now generated. (This makes user-defined
+     traits show up in the help as well.)
+ * WML Engine:
+   * New help_text= key for [trait] to set the description displayed in the help.
 
 Version 1.13.5:
  * Campaigns:
